ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: microstore-ingress
  annotations:  
    kubernetes.io/ingress.class: nginx   
    nginx.ingress.kubernetes.io/ssl-redirect: "false" 
    nginx.ingress.kubernetes.io/rewrite-target: /          
spec:
  rules:
  - http:
      paths:     
      - path: /
        backend:
          serviceName: products
          servicePort: 80
